--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@docusaurus/core": "3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
     "@mdx-js/react": "^3.0.0",
+    "bootstrap": "^5.2.3",
     "clsx": "^2.0.0",
     "million": "^3.0.6",
     "prism-react-renderer": "^2.3.0",
