--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "raaghu-docs",
   "version": "1.0.0",
-  "description": "Raaghu Frontend Studio - Documentation, is documentation built using React 18, Raaghu Design System and Docusaurus, provides robust, modular architecture, fully compatible with ABP Commercial.  It provides production ready end user application pages.",
+  "description": "Raaghu Frontend Suite - Documentation, is documentation built using React 18, Raaghu Design System and Docusaurus, provides robust, modular architecture, fully compatible with ABP Commercial.  It provides production ready end user application pages.",
   "repository": {
     "type": "git",
     "url": "https://github.com/Wai-Technologies/raaghu-docs"
   },
   "author": {
-    "name": "WAi Technologies",
+    "name": "Wai Technologies",
     "email": "support@waiin.com",
     "url": "https://waiin.com"
   },
