--- a/.github/workflows/development_raaghudocs.yml
+++ b/.github/workflows/development_raaghudocs.yml
@@ -1,56 +1,54 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - raaghudocs
-
+name: Raaghu Docs Deployment
 on:
-  push:
-    branches:
-      - development
   workflow_dispatch:
+
+permissions:
+  contents: none
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    permissions:
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
 
-      - name: npm install, build, and test
+      - name: npm install & build
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+          npm run build
 
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v2
         with:
-          name: node-app
-          path: release.zip
+          name: docs-app
+          path: build
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+    timeout-minutes: 10
+    permissions:
+      contents: none
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v2
         with:
-          name: node-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
+          name: docs-app
       
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
