--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mdx-js/react": "^3.0.0",
     "bootstrap": "^5.2.3",
     "clsx": "^2.0.0",
+    "docusaurus-lunr-search": "^3.4.0",
     "million": "^3.0.6",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
